--- a/index.html
+++ b/index.html
@@ -21,43 +21,71 @@
         <div class="row">
             <div class="col-25">
                 <div class="card">
-
+                    <img src="./assets/img/noun_Tram_3134750.png" alt="tram">
                 </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="ballon">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Bicycle_3134821.png" alt="bycicle">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Cruise_Ship_3134824.png" alt="ship">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="ballon">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card active">
+                    <img src="./assets/img/noun_Tractor_3134797.png" alt="tractor">
+                    <div class="card-title">
+                        <h3>Tractor</h3>
+                    </div>
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Bicycle_3134821.png" alt="bycicle">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Submarine_3134738.png" alt="submarine">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Tram_3134750.png" alt="tram">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Cruise_Ship_3134824.png" alt="ship">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Tractor_3134797.png" alt="tractor">
+                </div>
             </div>
             <div class="col-25">
-                <div class="card"></div>
+                <div class="card">
+                    <img src="./assets/img/noun_Submarine_3134738.png" alt="submarine">
+                </div>
             </div>
         </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
