--- a/index.html
+++ b/index.html
@@ -22,26 +22,41 @@
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Tram_3134750.png" alt="tram">
+                    <div class="card-title">
+                        <h3>Tram</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
-                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="ballon">
+                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="balloon">
+                    <div class="card-title">
+                        <h3>Air Balloon</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Bicycle_3134821.png" alt="bycicle">
+                    <div class="card-title">
+                        <h3>Bycicle</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Cruise_Ship_3134824.png" alt="ship">
+                    <div class="card-title">
+                        <h3>Ship</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
-                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="ballon">
+                    <img src="./assets/img/noun_air_balloon_3134741.png" alt="balloon">
+                    <div class="card-title">
+                        <h3>Air Balloon</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
@@ -55,31 +70,49 @@
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Bicycle_3134821.png" alt="bycicle">
+                    <div class="card-title">
+                        <h3>Bycicle</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Submarine_3134738.png" alt="submarine">
+                    <div class="card-title">
+                        <h3>Submarine</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Tram_3134750.png" alt="tram">
+                    <div class="card-title">
+                        <h3>Tram</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Cruise_Ship_3134824.png" alt="ship">
+                    <div class="card-title">
+                        <h3>Ship</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Tractor_3134797.png" alt="tractor">
+                    <div class="card-title">
+                        <h3>Tractor</h3>
+                    </div>
                 </div>
             </div>
             <div class="col-25">
                 <div class="card">
                     <img src="./assets/img/noun_Submarine_3134738.png" alt="submarine">
+                    <div class="card-title">
+                        <h3>Submarine</h3>
+                    </div>
                 </div>
             </div>
         </div>
