--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
         </div>
     </main>
     <footer>
-
+        <div class="row">
+            <div class="col-100">
+                <p>From me for Boolean Careers</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
